fixed services spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -143,6 +143,9 @@ footer {
 
 #services {
     background: linear-gradient(rgba(163, 64, 179, 0.7), rgba(255, 252, 252, 0.6));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding: 2em 0;
 }
 
@@ -151,7 +154,7 @@ footer {
     font-weight: 300;
     margin: 0 auto;
     max-width: 68ch;
-    padding: 0 3em;
+    padding: 1em 3em 0 3em;
 }
 
 span {
